--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.3",
+    "date-fns": "^3.2.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
